Bug 1074387 - Fix double-counting of WebAudio PannerNode memory. r=jessup